syntax = "proto3";

package profile;

option go_package = "grpc-rest-test/v2";

service ProfileService {
    rpc GetUser(GetUserRequest) returns (User);
}

message GetUserRequest {
    string userID = 1;
}

message User {
    string userID = 1;
    string username = 2;
    string email = 3;
}
